# rtipc-rust

./: Cargo.toml
.github/workflows/: publish.yml
doc/: flow.drawio
examples/: client.rs  server.rs
src/: channel.rs  lib.rs  protocol.rs  queue.rs  shm.rs  socket.rs
