[package]
name = "rtipc"
version = "0.6.0"
edition = "2024"
description = "Real-Time IPC, based on a zero-copy, wait-free circular message queue implementation"
readme = "README.md"
repository = "https://github.com/mausys/rtipc-rust"
license = "MIT OR Apache-2.0"
keywords = ["ipc", "linux", "real-time"]
categories = ["concurrency"]


[dependencies]
nix = { version = "0.30.1", features = ["event", "fs", "mman", "feature", "socket", "uio"] }
log = {version = "0.4"}


[features]
predefined_cacheline_size = []


[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "server"
path = "examples/server.rs"
